--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,60 @@
-aiosmtplib==3.0.2
-alembic==1.15.1
-annotated-types==0.7.0
-anyio==4.9.0
-APScheduler==3.11.0
-argcomplete==3.6.2
-asyncpg==0.30.0
-bcrypt==4.3.0
-black==25.1.0
-blinker==1.9.0
-certifi==2025.1.31
-click==8.1.8
-cloudinary==1.43.0
-colorama==0.4.6
-Deprecated==1.2.18
-dnspython==2.7.0
-email_validator==2.2.0
-fastapi==0.115.11
-fastapi-cli==0.0.7
-fastapi-mail==1.4.2
-greenlet==3.1.1
-h11==0.14.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-Jinja2==3.1.6
-libgravatar==1.0.4
-limits==4.6
-Mako==1.3.9
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mypy-extensions==1.0.0
-packaging==24.2
-passlib==1.7.4
-pathspec==0.12.1
-pipx==1.7.1
-platformdirs==4.3.7
-pydantic==2.10.6
-pydantic-settings==2.8.1
-pydantic_core==2.27.2
-Pygments==2.19.1
-PyJWT==2.10.1
-python-dotenv==1.0.1
-python-multipart==0.0.20
-PyYAML==6.0.2
-redis==5.2.1
-rich==13.9.4
-rich-toolkit==0.13.2
-shellingham==1.5.4
-six==1.17.0
-slowapi==0.1.9
-sniffio==1.3.1
-SQLAlchemy==2.0.40
-starlette==0.46.1
-typer==0.15.2
-typing_extensions==4.12.2
-tzdata==2025.2
-tzlocal==5.3.1
-urllib3==2.3.0
-userpath==1.9.2
-uvicorn==0.34.0
-watchfiles==1.0.4
-websockets==15.0.1
-wrapt==1.17.2
+aiosmtplib==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
+alembic==1.15.1 ; python_version >= "3.12" and python_version < "4.0"
+annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
+anyio==4.9.0 ; python_version >= "3.12" and python_version < "4.0"
+apscheduler==3.11.0 ; python_version >= "3.12" and python_version < "4.0"
+asyncpg==0.30.0 ; python_version >= "3.12" and python_version < "4.0"
+bcrypt==4.3.0 ; python_version >= "3.12" and python_version < "4.0"
+blinker==1.9.0 ; python_version >= "3.12" and python_version < "4.0"
+certifi==2025.1.31 ; python_version >= "3.12" and python_version < "4.0"
+click==8.1.8 ; python_version >= "3.12" and python_version < "4.0"
+cloudinary==1.43.0 ; python_version >= "3.12" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+deprecated==1.2.18 ; python_version >= "3.12" and python_version < "4.0"
+dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
+email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
+fastapi-cli[standard]==0.0.7 ; python_version >= "3.12" and python_version < "4.0"
+fastapi-mail==1.4.2 ; python_version >= "3.12" and python_version < "4.0"
+fastapi[standard]==0.115.11 ; python_version >= "3.12" and python_version < "4.0"
+greenlet==3.1.1 ; python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
+h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
+httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
+httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
+httpx==0.28.1 ; python_version >= "3.12" and python_version < "4.0"
+idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
+jinja2==3.1.6 ; python_version >= "3.12" and python_version < "4.0"
+libgravatar==1.0.4 ; python_version >= "3.12" and python_version < "4.0"
+limits==4.6 ; python_version >= "3.12" and python_version < "4.0"
+mako==1.3.9 ; python_version >= "3.12" and python_version < "4.0"
+markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
+markupsafe==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
+passlib[bcrypt]==1.7.4 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-core==2.27.2 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-settings==2.8.1 ; python_version >= "3.12" and python_version < "4.0"
+pydantic==2.10.6 ; python_version >= "3.12" and python_version < "4.0"
+pygments==2.19.1 ; python_version >= "3.12" and python_version < "4.0"
+pyjwt==2.10.1 ; python_version >= "3.12" and python_version < "4.0"
+python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
+python-multipart==0.0.20 ; python_version >= "3.12" and python_version < "4.0"
+pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
+redis==5.2.1 ; python_version >= "3.12" and python_version < "4.0"
+rich-toolkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
+rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
+shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
+six==1.17.0 ; python_version >= "3.12" and python_version < "4.0"
+slowapi==0.1.9 ; python_version >= "3.12" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
+sqlalchemy==2.0.40 ; python_version >= "3.12" and python_version < "4.0"
+starlette==0.46.1 ; python_version >= "3.12" and python_version < "4.0"
+typer==0.15.2 ; python_version >= "3.12" and python_version < "4.0"
+typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
+tzdata==2025.2 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
+tzlocal==5.3.1 ; python_version >= "3.12" and python_version < "4.0"
+urllib3==2.3.0 ; python_version >= "3.12" and python_version < "4.0"
+uvicorn[standard]==0.34.0 ; python_version >= "3.12" and python_version < "4.0"
+uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
+watchfiles==1.0.4 ; python_version >= "3.12" and python_version < "4.0"
+websockets==15.0.1 ; python_version >= "3.12" and python_version < "4.0"
+wrapt==1.17.2 ; python_version >= "3.12" and python_version < "4.0"
